Fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "manychat/cource-promo",
+    "name": "manychat/course-promo",
     "license": "proprietary",
 
     "type": "project",
